changed padding for top container, fixed overflowing p in bottom left container, got rid of break in html

--- a/styles.css
+++ b/styles.css
@@ -32,11 +32,12 @@ body {
 .card {
   border-radius: .5em;
   overflow: hidden;
+  width: 640px;
 }
 
 .top{
   background-color: #fff;
-  padding: 24px;
+  padding: 40px;
 }
 .top h3 {
   color: var(--cyan);
@@ -50,6 +51,7 @@ body {
 .top p {
   color: hsla(218, 22%, 67%, .75);
   line-height: 1.4;
+  font-size: 1em;
 }
 
 .bottom {
